--- a/app/admin/components/asp-net-roles/asp-net-roles.component.html
+++ b/app/admin/components/asp-net-roles/asp-net-roles.component.html
@@ -254,18 +254,14 @@
           <div class="row">
             <div class="column">
               <!-- <h2>Sample 1</h2> -->
-              <div class="title-tagging-desc">List of tagged modules:</div>
+              <div class="title-tagging-desc">List of tagged modules: {{totalRoleModulesRowCount}}</div>
               <div class="col-lg-12 mx-auto">
                 <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
                   <tr class="text-light header-bg-color-um system-name">
-                    <th class="text-center" style="width:16%">
-                      ID
-                    </th>
+                    <th class="text-center" style="width:16%">ID</th>
                     <th class="text-center" style="width:16%">Main Menu</th>
                     <th class="text-center" style="width:16%">Sub Menu</th>
                     <th class="text-center" style="width:16%">Untag</th>
-
-
                   </tr>
 
                   <tr *ngFor="let role of RoleModule | paging : currentPageIndexModuleTagged : pageSize;
@@ -273,8 +269,6 @@
                     <td>{{role.id}}</td>
                     <td>{{role.mainmodulename}}</td>
                     <td>{{role.submenuname}}</td>
-
-
                     <td class="text-center">
                       <button mat-stroked-button color="primary" class="editbtnStyle"
                         (click)="onEditClick($event, role)" data-toggle="modal" data-target="#editModal1"
@@ -288,50 +282,56 @@
                 <div class="col-12">
                   <ul class="pagination justify-content-center mt-1">
                     <li class="page-item" (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged - 1)">
-                      <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#" onclick="return false">Prev</a>
+                      <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
+                        onclick="return false">Prev</a>
                     </li>
-              
-                    <ng-container *ngIf="pages.length <= 10">
-                      <li class="page-item" *ngFor="let page of pages"
+
+                    <ng-container *ngIf="pagesTagged.length <= 10">
+                      <li class="page-item" *ngFor="let page of pagesTagged"
                         [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexModuleTagged}"
                         (click)="onPageIndexClickedModuleTagged(page.pageIndex)">
                         <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
                       </li>
                     </ng-container>
-              
-                    <ng-container *ngIf="pages.length > 10">
+
+                    <ng-container *ngIf="pagesTagged.length > 10">
                       <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == 0}"
                         (click)="onPageIndexClickedModuleTagged(0)">
                         <a class="page-link" href="#" onclick="return false">1</a>
                       </li>
-              
+
                       <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == 1}"
                         (click)="onPageIndexClickedModuleTagged(1)">
                         <a class="page-link" href="#" onclick="return false">2</a>
                       </li>
-              
-                      <li *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pages.length - 2">&nbsp;...&nbsp;</li>
-              
-                      <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged)"
-                        *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pages.length - 2">
+
+                      <li *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pagesTagged.length - 2">
+                        &nbsp;...&nbsp;</li>
+
+                      <li class="page-item" [ngClass]=" 'link-active-paging' "
+                        (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged)"
+                        *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pagesTagged.length - 2">
                         <a class="page-link" href="#" onclick="return false">{{currentPageIndexModuleTagged + 1}}</a>
                       </li>
-              
+
                       <li>&nbsp;...&nbsp;</li>
-              
-                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == pages.length - 2}"
-                        (click)="onPageIndexClickedModuleTagged(pages.length - 2)">
-                        <a class="page-link" href="#" onclick="return false">{{pages.length - 1}}</a>
+
+                      <li class="page-item"
+                        [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == pagesTagged.length - 2}"
+                        (click)="onPageIndexClickedModuleTagged(pagesTagged.length - 2)">
+                        <a class="page-link" href="#" onclick="return false">{{pagesTagged.length - 1}}</a>
                       </li>
-              
-                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == pages.length - 1}"
-                        (click)="onPageIndexClickedModuleTagged(pages.length - 1)">
-                        <a class="page-link" href="#" onclick="return false">{{pages.length}}</a>
+
+                      <li class="page-item"
+                        [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == pagesTagged.length - 1}"
+                        (click)="onPageIndexClickedModuleTagged(pagesTagged.length - 1)">
+                        <a class="page-link" href="#" onclick="return false">{{pagesTagged.length}}</a>
                       </li>
                     </ng-container>
-              
+
                     <li class="page-item" (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged + 1)">
-                      <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#" onclick="return false">Next</a>
+                      <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
+                        onclick="return false">Next</a>
                     </li>
                   </ul>
                 </div>
@@ -341,8 +341,103 @@
 
 
             </div>
-            <div class="column" style="background-color: blue;">
-              <h2>Sample 2</h2>
+            <div class="column">
+              <!-- start -->
+              <div class="title-tagging-desc">List of Untagged modules: {{totalRoleModulesUntaggedRowCount}}</div>
+              <div class="col-lg-12 mx-auto">
+                <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
+                  <tr class="text-light header-bg-color-um system-name">
+                    <th class="text-center" style="width:16%">
+                      ID
+                    </th>
+                    <th class="text-center" style="width:16%">Main Menu</th>
+                    <th class="text-center" style="width:16%">Sub Menu</th>
+                    <th class="text-center" style="width:16%">Untag</th>
+
+
+                  </tr>
+
+                  <tr *ngFor="let role of RoleModuleUnTagged | paging :  currentPageIndexModuleUntagged : pageSize;
+                 let i = index">
+                    <td>{{role.id}}</td>
+                    <td>{{role.mainmodulename}}</td>
+                    <td>{{role.submenuname}}</td>
+
+
+                    <td class="text-center">
+                      <button mat-stroked-button color="primary" class="editbtnStyle"
+                        (click)="onEditClick($event, role)" data-toggle="modal" data-target="#editModal1"
+                        data-backdrop="false" data-keyboard="false">
+                        <mat-icon>add_circle_outline</mat-icon>
+                      </button>&nbsp;
+                    </td>
+                  </tr>
+                </table>
+
+                <div class="col-12">
+                  <ul class="pagination justify-content-center mt-1">
+                    <li class="page-item"
+                      (click)="onPageIndexClickedModuleUntagged(currentPageIndexModuleUntagged - 1)">
+                      <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
+                        onclick="return false">Prev</a>
+                    </li>
+
+                    <ng-container *ngIf="pagesUnTagged.length <= 10">
+                      <li class="page-item" *ngFor="let page of pagesUnTagged"
+                        [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexModuleUntagged}"
+                        (click)="onPageIndexClickedModuleUntagged(page.pageIndex)">
+                        <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
+                      </li>
+                    </ng-container>
+
+                    <ng-container *ngIf="pagesUnTagged.length > 10">
+                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleUntagged == 0}"
+                        (click)="onPageIndexClickedModuleUntagged(0)">
+                        <a class="page-link" href="#" onclick="return false">1</a>
+                      </li>
+
+                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleUntagged == 1}"
+                        (click)="onPageIndexClickedModuleUntagged(1)">
+                        <a class="page-link" href="#" onclick="return false">2</a>
+                      </li>
+
+                      <li
+                        *ngIf="currentPageIndexModuleUnTagged > 1 && currentPageIndexModuleUntagged < pagesUnTagged.length - 2">
+                        &nbsp;...&nbsp;</li>
+
+                      <li class="page-item" [ngClass]=" 'link-active-paging' "
+                        (click)="onPageIndexClickedModuleUntagged(currentPageIndexModuleUntagged)"
+                        *ngIf="currentPageIndexModuleUntagged > 1 && currentPageIndexModuleUntagged < pagesUnTagged.length - 2">
+                        <a class="page-link" href="#" onclick="return false">{{currentPageIndexModuleUntagged + 1}}</a>
+                      </li>
+
+                      <li>&nbsp;...&nbsp;</li>
+
+                      <li class="page-item"
+                        [ngClass]="{ 'link-active-paging': currentPageIndexModuleUntagged == pagesUnTagged.length - 2}"
+                        (click)="onPageIndexClickedModuleUntagged(pagesUnTagged.length - 2)">
+                        <a class="page-link" href="#" onclick="return false">{{pagesUnTagged.length - 1}}</a>
+                      </li>
+
+                      <li class="page-item"
+                        [ngClass]="{ 'link-active-paging': currentPageIndexModuleUntagged == pagesUnTagged.length - 1}"
+                        (click)="onPageIndexClickedModuleUntagged(pagesUnTagged.length - 1)">
+                        <a class="page-link" href="#" onclick="return false">{{pagesUnTagged.length}}</a>
+                      </li>
+                    </ng-container>
+
+                    <li class="page-item"
+                      (click)="onPageIndexClickedModuleUntagged(currentPageIndexModuleUntagged + 1)">
+                      <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
+                        onclick="return false">Next</a>
+                    </li>
+                  </ul>
+                </div>
+
+
+              </div>
+
+              <!-- End -->
             </div>
           </div>
 
