--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -19,7 +19,7 @@
       <mat-tab>
         <ng-template mat-tab-label>
           Internal Orders
-          <!-- &nbsp; <span *ngIf="totalStoreOrderRowCount" class="badge badge-danger zerobadge{{ totalStoreOrderRowCount }}">{{ totalStoreOrderRowCount }}</span> -->
+          &nbsp; <span class="badge badge-danger zerobadge{{ totalOrderRowCount }}">{{ totalOrderRowCount }}</span>
         </ng-template>
         <div class="col-sm-12" style="padding-top: 2em">
           <div class="d-flex">
@@ -218,9 +218,9 @@
                       <td>{{item.mrs_req_desc}}</td>
                       <td>{{item.mrs_requested_by}}</td>
                       <td>{{item.total_state_repack | number:'1.0':'en-US'}}
-                        <mat-icon class="zerobadge{{item.total_state_repack_cancelled_qty | number:'1.0':'en-US'}}"
+                        <!-- <mat-icon class="zerobadge{{item.total_state_repack_cancelled_qty | number:'1.0':'en-US'}}"
                           matBadge="{{item.total_state_repack_cancelled_qty | number:'1.0':'en-US'}}" matBadgeColor="accent">
-                        </mat-icon>
+                        </mat-icon> -->
                       </td>
                       <td>{{item.totalPreparedItems | number:'1.0':'en-US'}}</td>
                 
@@ -233,8 +233,11 @@
         
         
         
-                        <button (click)="onApproveClick(item)" data-toggle="modal" data-target="#preparedOrderApprovalModal"
-                          data-backdrop="false" title="Edit" data-keyboard="false" class="editbtnStyle" color="primary"
+                        <button (click)="approvedOrder(item)"
+                        
+                  
+                          
+                          class="editbtnStyle" color="primary"
                           mat-stroked-button>
                           <span class="fa fa-check-circle"></span> Approve
                         </button>
@@ -256,50 +259,50 @@
           <!-- pagination -->
           <div class="col-md-12">
             <ul class="pagination paginationStyle justify-content-center mt-1">
-              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
+              <li class="page-item" (click)="onPageIndexClickedPreparedOrders(currentPageIndexPreparedOrders - 1)">
                 <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#" onclick="return false">Prev</a>
               </li>
 
-              <ng-container *ngIf="pages.length <= 10">
-                <li class="page-item" *ngFor="let page of pages"
-                  [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndex}"
-                  (click)="onPageIndexClicked(page.pageIndex)">
+              <ng-container *ngIf="pagesPreparedOrders.length <= 10">
+                <li class="page-item" *ngFor="let page of pagesPreparedOrders"
+                  [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexPreparedOrders}"
+                  (click)="onPageIndexClickedPreparedOrders(page.pageIndex)">
                   <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
                 </li>
               </ng-container>
 
-              <ng-container *ngIf="pages.length > 10">
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0}"
-                  (click)="onPageIndexClicked(0)">
+              <ng-container *ngIf="pagesPreparedOrders.length > 10">
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexPreparedOrders == 0}"
+                  (click)="onPageIndexClickedPreparedOrders(0)">
                   <a class="page-link" href="#" onclick="return false">1</a>
                 </li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1}"
-                  (click)="onPageIndexClicked(1)">
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexPreparedOrders == 1}"
+                  (click)="onPageIndexClickedPreparedOrders(1)">
                   <a class="page-link" href="#" onclick="return false">2</a>
                 </li>
 
-                <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">&nbsp;...&nbsp;</li>
+                <li *ngIf="currentPageIndexPreparedOrders > 1 && currentPageIndexPreparedOrders < pagesPreparedOrders.length - 2">&nbsp;...&nbsp;</li>
 
-                <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClicked(currentPageIndex)"
-                  *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
-                  <a class="page-link" href="#" onclick="return false">{{currentPageIndex + 1}}</a>
+                <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClickedPreparedOrders(currentPageIndexPreparedOrders)"
+                  *ngIf="currentPageIndexPreparedOrders > 1 && currentPageIndexPreparedOrders < pagesPreparedOrders.length - 2">
+                  <a class="page-link" href="#" onclick="return false">{{currentPageIndexPreparedOrders + 1}}</a>
                 </li>
 
                 <li>&nbsp;...&nbsp;</li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 2}"
-                  (click)="onPageIndexClicked(pages.length - 2)">
-                  <a class="page-link" href="#" onclick="return false">{{pages.length - 1}}</a>
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexPreparedOrders == pagesPreparedOrders.length - 2}"
+                  (click)="onPageIndexClicked(pagesPreparedOrders.length - 2)">
+                  <a class="page-link" href="#" onclick="return false">{{pagesPreparedOrders.length - 1}}</a>
                 </li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 1}"
-                  (click)="onPageIndexClicked(pages.length - 1)">
-                  <a class="page-link" href="#" onclick="return false">{{pages.length}}</a>
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexPreparedOrders == pagesPreparedOrders.length - 1}"
+                  (click)="onPageIndexClicked(pagesPreparedOrders.length - 1)">
+                  <a class="page-link" href="#" onclick="return false">{{pagesPreparedOrders.length}}</a>
                 </li>
               </ng-container>
 
-              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
+              <li class="page-item" (click)="onPageIndexClickedPreparedOrders(currentPageIndexPreparedOrders + 1)">
                 <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#" onclick="return false">Next</a>
               </li>
             </ul>
@@ -610,7 +613,7 @@
       <div class="modal-content" style="width: auto;">
         <div class="modal-header bg-all">
           <div class="modal-title white-color">Prepared Orders Approval</div>
-          <button type="button" class="close" data-dismiss="modal" #closeAddExpenseModal><span>&times;</span></button>
+          <button type="button" class="close" data-dismiss="modal" (click)="CloseViewOrderRedirectToInternalOrder()"  #closeAddExpenseModal><span>&times;</span></button>
         </div>
         <div class="modal-body">
           <mat-card class="text-bold">Internal Information
@@ -739,7 +742,7 @@
         <div>
         </div>
 
-        <div class="modal-footer">
+        <!-- <div class="modal-footer">
           <button mat-stroked-button color="primary" id="ApproveButton" [hidden]="hideApproveButton" class="mr-2"
             (click)="approvedOrder()" [disabled]="!approvalForm.valid">Approve</button>
           <button [hidden]="true" mat-stroked-button color="warn" data-dismiss="modal"
@@ -751,7 +754,7 @@
             </p>
           </ng-container>
 
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
