--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -313,7 +313,7 @@
       <mat-tab>
         <ng-template mat-tab-label>
           Dispatching
-          <!-- &nbsp; <span *ngIf="totalStoreOrderRowCount" class="badge badge-danger zerobadge{{ totalStoreOrderRowCount }}">{{ totalStoreOrderRowCount }}</span> -->
+          &nbsp; <span class="badge badge-danger zerobadge{{totalDispatchingCount}}">{{totalDispatchingCount}}</span>
         </ng-template>
 
         <div class="col-sm-12" style="padding-top: 2em;">
@@ -353,25 +353,21 @@
                     <tr class="text-light header-bg-color-um system-name">
                       <th>Order No.</th>
                       <th>Preparation Date</th>
-                      <th>Category</th>
-                      <th>Fox</th>
-                      <th>Store</th>
-                      <th>Route</th>
-                      <th>Area</th>
+                      <th>Department</th>
+                      <th>Description</th>
+                      <th>Requested By</th>
                       <th>Total Item(s)</th>
                       <th class="text-center">Action</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr
-                      *ngFor="let item of DispatchOrderList | filter: searchBy : searchText | paging : currentPageIndex : pageSize; let i = index">
+                      *ngFor="let item of DispatchOrderList | filter: searchBy : searchText | paging : currentPageIndexDispatching : pageSize; let i = index">
                       <td>{{item.wh_checker_move_order_no | number:'1.0':'en-US'}}</td>
                       <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy"}}</td>
-                      <td>{{item.category}}</td>
-                      <td>{{item.fox}}</td>
-                      <td>{{item.store_name}}</td>
-                      <td>{{item.route}}</td>
-                      <td>{{item.area}}</td>
+                      <td>{{item.department_name}}</td>
+                      <td>{{item.mrs_req_desc}}</td>
+                      <td>{{item.mrs_requested_by}}</td>
                       <td>{{item.total_state_repack | number:'1.0':'en-US'}}</td>
                       <td class="text-center">
                         <button
@@ -398,50 +394,50 @@
           <!-- pagination -->
           <div class="col-md-12">
             <ul class="pagination paginationStyle justify-content-center mt-1">
-              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
+              <li class="page-item" (click)="onPageIndexClickedDispatching(currentPageIndexDispatching - 1)">
                 <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#" onclick="return false">Prev</a>
               </li>
 
-              <ng-container *ngIf="pages.length <= 10">
-                <li class="page-item" *ngFor="let page of pages"
-                  [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndex}"
-                  (click)="onPageIndexClicked(page.pageIndex)">
+              <ng-container *ngIf="pagesDispatching.length <= 10">
+                <li class="page-item" *ngFor="let page of pagesDispatching"
+                  [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexDispatching}"
+                  (click)="onPageIndexClickedDispatching(page.pageIndex)">
                   <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
                 </li>
               </ng-container>
 
-              <ng-container *ngIf="pages.length > 10">
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0}"
-                  (click)="onPageIndexClicked(0)">
+              <ng-container *ngIf="pagesDispatching.length > 10">
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexDispatching == 0}"
+                  (click)="onPageIndexClickedDispatching(0)">
                   <a class="page-link" href="#" onclick="return false">1</a>
                 </li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1}"
-                  (click)="onPageIndexClicked(1)">
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexDispatching == 1}"
+                  (click)="onPageIndexClickedDispatching(1)">
                   <a class="page-link" href="#" onclick="return false">2</a>
                 </li>
 
-                <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">&nbsp;...&nbsp;</li>
+                <li *ngIf="currentPageIndexDispatching > 1 && currentPageIndexDispatching < pagesDispatching.length - 2">&nbsp;...&nbsp;</li>
 
-                <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClicked(currentPageIndex)"
-                  *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
-                  <a class="page-link" href="#" onclick="return false">{{currentPageIndex + 1}}</a>
+                <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClickedDispatching(currentPageIndexDispatching)"
+                  *ngIf="currentPageIndexDispatching > 1 && currentPageIndexDispatching < pagesDispatching.length - 2">
+                  <a class="page-link" href="#" onclick="return false">{{currentPageIndexDispatching + 1}}</a>
                 </li>
 
                 <li>&nbsp;...&nbsp;</li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 2}"
-                  (click)="onPageIndexClicked(pages.length - 2)">
-                  <a class="page-link" href="#" onclick="return false">{{pages.length - 1}}</a>
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexDispatching == pagesDispatching.length - 2}"
+                  (click)="onPageIndexClickedDispatching(pagesDispatching.length - 2)">
+                  <a class="page-link" href="#" onclick="return false">{{pagesDispatching.length - 1}}</a>
                 </li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 1}"
-                  (click)="onPageIndexClicked(pages.length - 1)">
-                  <a class="page-link" href="#" onclick="return false">{{pages.length}}</a>
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexDispatching == pagesDispatching.length - 1}"
+                  (click)="onPageIndexClickedDispatching(pagesDispatching.length - 1)">
+                  <a class="page-link" href="#" onclick="return false">{{pagesDispatching.length}}</a>
                 </li>
               </ng-container>
 
-              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
+              <li class="page-item" (click)="onPageIndexClickedDispatching(currentPageIndexDispatching + 1)">
                 <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#" onclick="return false">Next</a>
               </li>
             </ul>
